--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="background">#FFFFFF</color>
     <color name="login">#A1AEB1</color>
     <color name="blue">#00c2ff</color>
+    <color name="textBack">#ecede8</color>
 </resources>
