--- a/app/src/main/res/layout/user.xml
+++ b/app/src/main/res/layout/user.xml
@@ -10,6 +10,7 @@
         android:text="avani"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:textColor="@color/blue"
         android:layout_marginLeft="10dp"/>
     <View
         android:layout_marginTop="5dp"
