--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatActivity">
+    tools:context=".ChattingLoadAndSend.ChatActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chatRecyclerView"
@@ -23,7 +23,7 @@
         <EditText
             android:id="@+id/messageBox"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_weight="90"
             android:layout_marginLeft="10dp"
             android:hint="Message"
@@ -31,11 +31,11 @@
             android:background="@drawable/rounded"/>
         <ImageView
             android:id="@+id/sendButton"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:src="@drawable/send"
-            android:layout_weight="20"/>
-
+            android:layout_weight="12.5"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/ic_send" />
     </LinearLayout>
 
 </RelativeLayout>
