--- a/app/src/main/res/layout/sent.xml
+++ b/app/src/main/res/layout/sent.xml
@@ -7,8 +7,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="7.5dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/text_view">
 
         <TextView
